Fixed exports in package.json for Node16 and NodeNext module resolutions

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@opra/common": ["../common/src"]
+      "@opra/common": ["../common/src/index.ts"]
     }
   }
 }
