--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,22 +1,17 @@
 {
   "name": "@opra/cli",
-  "version": "1.0.0-alpha.32",
+  "version": "1.0.0-alpha.33",
   "description": "Opra CLI tools",
   "author": "Panates",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/panates/opra.git",
-    "directory": "packages/client"
-  },
   "scripts": {
     "compile": "tsc",
     "prebuild": "npm run check && npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json",
-    "postbuild": "npm run copy:files && npm run copy:bin",
-    "copy:files": "cp README.md package.json ../../LICENSE ../../build/cli && cp ../../package.cjs.json ../../build/cli/cjs/package.json",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/cli/cjs/package.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/cli/esm/package.json",
+    "postbuild": "npm run copy:files && npm run copy:bin && node ../../support/postbuild.cjs",
+    "copy:files": "cp README.md package.json ../../LICENSE ../../build/cli",
     "copy:bin": "cp -R bin ../../build/cli/bin",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
@@ -27,14 +22,14 @@
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ../../build/client",
-    "clean:cover": "rimraf ../../coverage/client"
+    "clean:dist": "rimraf ../../build/cli",
+    "clean:cover": "rimraf ../../coverage/cli"
   },
   "dependencies": {
-    "@browsery/type-is": "^1.6.18-r3",
-    "@opra/client": "^1.0.0-alpha.32",
-    "@opra/common": "^1.0.0-alpha.32",
-    "chalk": "^5.3.0",
+    "@browsery/type-is": "^1.6.18-r5",
+    "@opra/client": "^1.0.0-alpha.33",
+    "@opra/common": "^1.0.0-alpha.33",
+    "ansi-colors": "^4.1.3",
     "commander": "^12.0.0",
     "js-string-escape": "^1.0.1",
     "putil-flattentext": "^2.1.1",
@@ -42,11 +37,30 @@
     "tslib": "^2.6.3"
   },
   "type": "module",
-  "module": "./esm/index.js",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./types/index.d.ts",
+        "default": "./esm/index.js"
+      },
+      "require": {
+        "types": "./types/index.d.ts",
+        "default": "./cjs/index.js"
+      },
+      "default": "./esm/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "main": "./cjs/index.js",
+  "module": "./esm/index.js",
   "types": "./types/index.d.ts",
   "bin": {
     "oprimp": "bin/oprimp.mjs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/panates/opra.git",
+    "directory": "packages/client"
   },
   "engines": {
     "node": ">=18.0",
