--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,79 +1,17 @@
 {
   "name": "@opra/client",
-  "version": "1.0.0-alpha.32",
+  "version": "1.0.0-alpha.33",
   "description": "Opra Client package",
   "author": "Panates",
   "license": "MIT",
-  "type": "module",
-  "module": "./esm/index.js",
-  "main": "./cjs/index.js",
-  "types": "./types/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./esm/index.js",
-      "browser": "./cjs/index.js",
-      "require": "./cjs/index.js",
-      "types": "./types/index.d.ts"
-    },
-    "./esm": {
-      "browser": "./browser/index.mjs",
-      "types": "./types/index.d.ts",
-      "default": "./browser/index.mjs"
-    },
-    "./cjs": {
-      "browser": "./browser/index.cjs",
-      "types": "./types/index.d.ts",
-      "default": "./cjs/index.js"
-    },
-    "./browser": {
-      "import": "./browser/index.mjs",
-      "types": "./types/index.d.ts",
-      "default": "./browser/index.cjs"
-    },
-    "./browser-cjs-min": "./browser/cjs.min.cjs",
-    "./browser-esm-min": "./browser/esm.min.mjs"
-  },
-  "dependencies": {
-    "@opra/common": "^1.0.0-alpha.32",
-    "accepts": "^1.3.8",
-    "cookie": "^0.6.0",
-    "encodeurl": "^2.0.0",
-    "fast-tokenizer": "^1.3.0",
-    "lodash.omit": "^4.5.0",
-    "process": "^0.11.10",
-    "putil-isplainobject": "^1.1.5",
-    "putil-merge": "^3.13.0",
-    "putil-promisify": "^1.10.1",
-    "putil-varhelpers": "^1.6.5",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": ">=7.0.0",
-    "ts-gems": "^3.4.0",
-    "tslib": "^2.6.3",
-    "uid": "^2.0.1"
-  },
-  "devDependencies": {
-    "@browsery/fs": "^0.4.0",
-    "@browsery/highland": "^2.13.5",
-    "@browsery/http-parser": "^0.5.8",
-    "@browsery/i18next": "^23.11.5",
-    "@browsery/stream": "^4.3.0",
-    "@browsery/type-is": "^1.6.18-r2",
-    "@browsery/util": "^0.12.5",
-    "body-parser": "^1.20.2",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "events": "^3.3.0",
-    "express": "^4.19.2",
-    "path-browserify": "^1.0.1"
-  },
   "scripts": {
     "compile": "tsc",
     "prebuild": "npm run check && npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm && npm run build:browser",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/client/cjs/package.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/client/esm/package.json",
     "build:browser": "node esbuild.mjs",
-    "postbuild": "cp README.md ../../LICENSE ../../build/client && cp ../../package.cjs.json ../../build/client/cjs/package.json",
+    "postbuild": "cp package.json README.md ../../LICENSE ../../build/client && node ../../support/postbuild.cjs",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
@@ -86,6 +24,64 @@
     "clean:dist": "rimraf ../../build/client",
     "clean:cover": "rimraf ../../coverage/client"
   },
+  "dependencies": {
+    "@opra/common": "^1.0.0-alpha.33",
+    "accepts": "^1.3.8",
+    "cookie": "^0.6.0",
+    "encodeurl": "^2.0.0",
+    "fast-tokenizer": "^1.6.1",
+    "lodash.omit": "^4.5.0",
+    "process": "^0.11.10",
+    "putil-isplainobject": "^1.1.5",
+    "putil-merge": "^3.13.0",
+    "putil-promisify": "^1.10.1",
+    "putil-varhelpers": "^1.6.5",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": ">=7.0.0",
+    "ts-gems": "^3.5.0",
+    "tslib": "^2.6.3",
+    "uid": "^2.0.1"
+  },
+  "devDependencies": {
+    "@browsery/fs": "^0.5.1-r1",
+    "@browsery/highland": "^2.13.6-r2",
+    "@browsery/http-parser": "^0.5.9-r1",
+    "@browsery/i18next": "^23.12.3-r1",
+    "@browsery/stream": "^4.3.1-r1",
+    "@browsery/type-is": "^1.6.18-r5",
+    "@browsery/util": "^0.12.6-r1",
+    "body-parser": "^1.20.2",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
+    "express": "^4.19.2",
+    "path-browserify": "^1.0.1"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./types/index.d.ts",
+        "default": "./esm/index.js"
+      },
+      "require": {
+        "types": "./types/index.d.ts",
+        "default": "./cjs/index.js"
+      },
+      "browser": {
+        "types": "./types/index.d.ts",
+        "import": "./browser/index.mjs",
+        "require": "./browser/index.cjs",
+        "default": "./browser/index.mjs"
+      },
+      "default": "./esm/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "./cjs/index.js",
+  "module": "./esm/index.js",
+  "browser": "./browser/index.cjs",
+  "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/panates/opra.git",
@@ -97,7 +93,6 @@
     "esm/",
     "browser/",
     "types/",
-    "browser.js",
     "LICENSE",
     "README.md"
   ],
