--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,27 +1,17 @@
 {
   "name": "@opra/common",
-  "version": "1.0.0-alpha.32",
+  "version": "1.0.0-alpha.33",
   "description": "Opra common package",
   "author": "Panates",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/panates/opra.git",
-    "directory": "packages/common"
-  },
-  "type": "module",
-  "module": "./esm/index.js",
-  "main": "./cjs/index.js",
-  "browser": "./browser.js",
-  "types": "./types/index.d.ts",
   "scripts": {
     "compile": "tsc",
     "prebuild": "npm run check && npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm && npm run build:browser",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/common/cjs/package.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/common/esm/package.json",
     "build:browser": "node esbuild.mjs",
-    "postbuild": "cp package.json ../../LICENSE ../../build/common && cp ../../package.cjs.json ../../build/common/cjs/package.json",
+    "postbuild": "cp package.json ../../LICENSE ../../build/common && node ../../support/postbuild.cjs",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
@@ -31,17 +21,17 @@
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ../../build/client",
-    "clean:cover": "rimraf ../../coverage/client",
-    "antlr4": "java -jar ./tools/antlr4-4.12.1-SNAPSHOT-complete.jar -Dlanguage=TypeScript ./src/filter/antlr/OpraFilter.g4 -visitor"
+    "clean:dist": "rimraf ../../build/common",
+    "clean:cover": "rimraf ../../coverage/common",
+    "antlr4": "java -jar ./tools/antlr-4.13.2-complete.jar -Dlanguage=TypeScript ./src/filter/antlr/OpraFilter.g4 -visitor"
   },
   "dependencies": {
-    "@browsery/antlr4": "^4.13.1-patch-1",
-    "@browsery/highland": "^2.13.5",
-    "@browsery/http-parser": "^0.5.8",
-    "@browsery/i18next": "^23.11.5",
-    "@browsery/type-is": "^1.6.18-r3",
-    "fast-tokenizer": "^1.3.0",
+    "@browsery/antlr4": "^4.13.3-r1",
+    "@browsery/highland": "^2.13.6-r2",
+    "@browsery/http-parser": "^0.5.9-r1",
+    "@browsery/i18next": "^23.12.3-r1",
+    "@browsery/type-is": "^1.6.18-r5",
+    "fast-tokenizer": "^1.6.1",
     "lodash.omit": "^4.5.0",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.13.0",
@@ -51,31 +41,60 @@
     "super-fast-md5": "^1.0.3",
     "tslib": "^2.6.3",
     "uid": "^2.0.1",
-    "valgen": "^5.6.0"
+    "valgen": "^5.8.2"
   },
   "devDependencies": {
-    "@browsery/fs": "^0.4.0",
-    "@browsery/stream": "^4.3.0",
-    "@browsery/util": "^0.12.5",
+    "@browsery/fs": "^0.5.1-r1",
+    "@browsery/stream": "^4.3.1-r1",
+    "@browsery/util": "^0.12.6-r1",
     "@types/encodeurl": "^1.0.2",
     "@types/lodash.omit": "^4.5.9",
     "@types/validator": "^13.12.0",
+    "eslint-tsc": "^0.5.0",
     "path-browserify": "^1.0.1",
-    "ts-gems": "^3.4.0"
+    "ts-gems": "^3.5.0"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./types/index.d.ts",
+        "default": "./esm/index.js"
+      },
+      "require": {
+        "types": "./types/index.d.ts",
+        "default": "./cjs/index.js"
+      },
+      "browser": {
+        "types": "./types/index.d.ts",
+        "import": "./browser/index.mjs",
+        "require": "./browser/index.cjs",
+        "default": "./browser/index.mjs"
+      },
+      "default": "./esm/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "./cjs/index.js",
+  "module": "./esm/index.js",
+  "browser": "./browser/index.cjs",
+  "types": "./types/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/panates/opra.git",
+    "directory": "packages/common"
   },
   "engines": {
     "node": ">=16.0",
     "npm": ">=7.0.0"
   },
   "files": [
-    "bin/",
     "cjs/",
     "esm/",
-    "umd/",
+    "browser/",
     "types/",
     "LICENSE",
-    "README.md",
-    "browser.js"
+    "README.md"
   ],
   "keywords": [
     "opra",
