--- a/packages/common/tsconfig-build-esm.json
+++ b/packages/common/tsconfig-build-esm.json
@@ -1,6 +1,8 @@
 {
   "extends": ["./tsconfig.json", "../../tsconfig-build.json"],
   "compilerOptions": {
+    "module": "ES2020",
+    "moduleResolution": "Node",
     "rootDir": "src",
     "outDir": "../../build/common/esm",
     "declarationDir": "../../build/common/types"
