--- a/packages/elastic/package.json
+++ b/packages/elastic/package.json
@@ -1,21 +1,16 @@
 {
   "name": "@opra/elastic",
-  "version": "1.0.0-alpha.32",
+  "version": "1.0.0-alpha.33",
   "description": "Opra Elastic Search adapter package",
   "author": "Panates",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/panates/opra.git",
-    "directory": "packages/elastic"
-  },
   "scripts": {
     "compile": "tsc",
     "prebuild": "npm run lint && npm run clean",
-    "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json",
-    "postbuild": "cp README.md package.json ../../LICENSE ../../build/elastic && cp ../../package.cjs.json ../../build/elastic/cjs/package.json",
+    "_build": "npm run build:cjs && npm run build:esm",
+    "_build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/elastic/cjs/package.json",
+    "_build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/elastic/esm/package.json",
+    "_postbuild": "cp README.md package.json ../../LICENSE ../../build/elastic && node ../../support/postbuild.cjs",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
@@ -24,33 +19,52 @@
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ../../build/client",
-    "clean:cover": "rimraf ../../coverage/client"
+    "clean:dist": "rimraf ../../build/elastic",
+    "clean:cover": "rimraf ../../coverage/elastic"
   },
   "dependencies": {
     "putil-isplainobject": "^1.1.5",
-    "tslib": "^2.6.3"
+    "tslib": "^2.6.3",
+    "valgen": "^5.8.2"
   },
   "devDependencies": {
-    "@elastic/elasticsearch": "^8.14.0",
+    "@elastic/elasticsearch": "^8.15.0",
     "@faker-js/faker": "^8.4.1",
-    "ts-gems": "^3.4.0"
+    "ts-gems": "^3.5.0"
   },
   "peerDependencies": {
     "@elastic/elasticsearch": ">=8.7.0",
-    "@opra/common": "^1.0.0-alpha.32",
-    "@opra/core": "^1.0.0-alpha.32"
+    "@opra/common": "^1.0.0-alpha.33",
+    "@opra/core": "^1.0.0-alpha.33"
   },
   "type": "module",
-  "module": "./esm/index.js",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./types/index.d.ts",
+        "default": "./esm/index.js"
+      },
+      "require": {
+        "types": "./types/index.d.ts",
+        "default": "./cjs/index.js"
+      },
+      "default": "./esm/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "main": "./cjs/index.js",
+  "module": "./esm/index.js",
   "types": "./types/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/panates/opra.git",
+    "directory": "packages/elastic"
+  },
   "engines": {
     "node": ">=16.0",
     "npm": ">=7.0.0"
   },
   "files": [
-    "bin/",
     "cjs/",
     "esm/",
     "types/",
