--- a/packages/elastic/tsconfig.json
+++ b/packages/elastic/tsconfig.json
@@ -4,8 +4,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@opra/common": ["../common/src"],
-      "@opra/core": ["../core/src"]
+      "@opra/common": ["../common/src/index.ts"],
+      "@opra/core": ["../core/src/index.ts"]
     }
   }
 }
