--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -50,7 +50,7 @@
     "@types/encodeurl": "^1.0.2",
     "@types/lodash.omit": "^4.5.9",
     "@types/validator": "^13.12.0",
-    "eslint-tsc": "^0.5.0",
+    "esbuild-tsc": "^1.0.0",
     "path-browserify": "^1.0.1",
     "ts-gems": "^3.5.0"
   },
