--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/nestjs",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-alpha.35",
   "description": "Opra NestJS module",
   "author": "Panates",
   "license": "MIT",
@@ -22,9 +22,9 @@
     "clean:cover": "rimraf ../../coverage/nestjs"
   },
   "dependencies": {
-    "@opra/common": "^1.0.0-alpha.34",
-    "@opra/core": "^1.0.0-alpha.34",
-    "fast-tokenizer": "^1.6.1",
+    "@opra/common": "^1.0.0-alpha.35",
+    "@opra/core": "^1.0.0-alpha.35",
+    "fast-tokenizer": "^1.7.0",
     "lodash.head": "^4.0.1",
     "putil-promisify": "^1.10.1",
     "reflect-metadata": "^0.2.2",
@@ -52,7 +52,7 @@
         "default": "./esm/index.js"
       },
       "require": {
-        "types": "./types/index.d.ts",
+        "types": "./types/index.d.cts",
         "default": "./cjs/index.js"
       },
       "default": "./esm/index.js"
