--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/cli",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-alpha.35",
   "description": "Opra CLI tools",
   "author": "Panates",
   "license": "MIT",
@@ -27,8 +27,8 @@
   },
   "dependencies": {
     "@browsery/type-is": "^1.6.18-r5",
-    "@opra/client": "^1.0.0-alpha.34",
-    "@opra/common": "^1.0.0-alpha.34",
+    "@opra/client": "^1.0.0-alpha.35",
+    "@opra/common": "^1.0.0-alpha.35",
     "ansi-colors": "^4.1.3",
     "commander": "^12.0.0",
     "js-string-escape": "^1.0.1",
@@ -44,7 +44,7 @@
         "default": "./esm/index.js"
       },
       "require": {
-        "types": "./types/index.d.ts",
+        "types": "./types/index.d.cts",
         "default": "./cjs/index.js"
       },
       "default": "./esm/index.js"
