--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/client",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-alpha.35",
   "description": "Opra Client package",
   "author": "Panates",
   "license": "MIT",
@@ -25,11 +25,11 @@
     "clean:cover": "rimraf ../../coverage/client"
   },
   "dependencies": {
-    "@opra/common": "^1.0.0-alpha.34",
+    "@opra/common": "^1.0.0-alpha.35",
     "accepts": "^1.3.8",
     "cookie": "^0.6.0",
     "encodeurl": "^2.0.0",
-    "fast-tokenizer": "^1.6.1",
+    "fast-tokenizer": "^1.7.0",
     "lodash.omit": "^4.5.0",
     "process": "^0.11.10",
     "putil-isplainobject": "^1.1.5",
@@ -65,13 +65,18 @@
         "default": "./esm/index.js"
       },
       "require": {
-        "types": "./types/index.d.ts",
+        "types": "./types/index.d.cts",
         "default": "./cjs/index.js"
       },
       "browser": {
-        "types": "./types/index.d.ts",
-        "import": "./browser/index.mjs",
-        "require": "./browser/index.cjs",
+        "import": {
+          "types": "./types/index.d.ts",
+          "default": "./browser/index.mjs"
+        },
+        "require": {
+          "types": "./types/index.d.cts",
+          "default": "./browser/index.cjs"
+        },
         "default": "./browser/index.mjs"
       },
       "default": "./esm/index.js"
@@ -80,7 +85,6 @@
   },
   "main": "./cjs/index.js",
   "module": "./esm/index.js",
-  "browser": "./browser/index.cjs",
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
