--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/common",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-alpha.35",
   "description": "Opra common package",
   "author": "Panates",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "@browsery/http-parser": "^0.5.9-r1",
     "@browsery/i18next": "^23.12.3-r1",
     "@browsery/type-is": "^1.6.18-r5",
-    "fast-tokenizer": "^1.6.1",
+    "fast-tokenizer": "^1.7.0",
     "lodash.omit": "^4.5.0",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.13.0",
@@ -41,7 +41,7 @@
     "super-fast-md5": "^1.0.3",
     "tslib": "^2.6.3",
     "uid": "^2.0.1",
-    "valgen": "^5.8.2"
+    "valgen": "^5.9.0"
   },
   "devDependencies": {
     "@browsery/fs": "^0.5.1-r1",
@@ -62,13 +62,18 @@
         "default": "./esm/index.js"
       },
       "require": {
-        "types": "./types/index.d.ts",
+        "types": "./types/index.d.cts",
         "default": "./cjs/index.js"
       },
       "browser": {
-        "types": "./types/index.d.ts",
-        "import": "./browser/index.mjs",
-        "require": "./browser/index.cjs",
+        "import": {
+          "types": "./types/index.d.ts",
+          "default": "./browser/index.mjs"
+        },
+        "require": {
+          "types": "./types/index.d.cts",
+          "default": "./browser/index.cjs"
+        },
         "default": "./browser/index.mjs"
       },
       "default": "./esm/index.js"
@@ -77,7 +82,6 @@
   },
   "main": "./cjs/index.js",
   "module": "./esm/index.js",
-  "browser": "./browser/index.cjs",
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
