--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/core",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-alpha.35",
   "description": "Opra schema package",
   "author": "Panates",
   "license": "MIT",
@@ -29,7 +29,7 @@
     "@browsery/antlr4": "^4.13.3-r1",
     "@browsery/http-parser": "^0.5.9-r1",
     "@browsery/type-is": "^1.6.18-r5",
-    "@opra/common": "^1.0.0-alpha.34",
+    "@opra/common": "^1.0.0-alpha.35",
     "accepts": "^1.3.8",
     "base64-stream": "^1.0.0",
     "busboy": "^1.6.0",
@@ -40,20 +40,20 @@
     "cookie-signature": "^1.2.1",
     "cppzst": "^2.0.12",
     "encodeurl": "^2.0.0",
-    "fast-tokenizer": "^1.6.1",
+    "fast-tokenizer": "^1.7.0",
     "fresh": "^0.5.2",
     "iconv-lite": "^0.6.3",
     "mime-types": "^2.1.35",
-    "power-tasks": "^1.10.1",
+    "power-tasks": "^1.11.0",
     "putil-isplainobject": "^1.1.5",
     "putil-merge": "^3.13.0",
     "putil-varhelpers": "^1.6.5",
     "range-parser": "^1.2.1",
     "raw-body": "^3.0.0",
     "reflect-metadata": "^0.2.2",
-    "strict-typed-events": "^2.7.2",
+    "strict-typed-events": "^2.8.0",
     "tslib": "^2.6.3",
-    "valgen": "^5.8.2",
+    "valgen": "^5.9.0",
     "vary": "^1.1.2"
   },
   "optionalDependencies": {
@@ -93,7 +93,7 @@
         "default": "./esm/index.js"
       },
       "require": {
-        "types": "./types/index.d.ts",
+        "types": "./types/index.d.cts",
         "default": "./cjs/index.js"
       },
       "default": "./esm/index.js"
