--- a/packages/elastic/package.json
+++ b/packages/elastic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/elastic",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-alpha.35",
   "description": "Opra Elastic Search adapter package",
   "author": "Panates",
   "license": "MIT",
@@ -25,7 +25,7 @@
   "dependencies": {
     "putil-isplainobject": "^1.1.5",
     "tslib": "^2.6.3",
-    "valgen": "^5.8.2"
+    "valgen": "^5.9.0"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^8.15.0",
@@ -34,8 +34,8 @@
   },
   "peerDependencies": {
     "@elastic/elasticsearch": ">=8.7.0",
-    "@opra/common": "^1.0.0-alpha.34",
-    "@opra/core": "^1.0.0-alpha.34"
+    "@opra/common": "^1.0.0-alpha.35",
+    "@opra/core": "^1.0.0-alpha.35"
   },
   "type": "module",
   "exports": {
@@ -45,7 +45,7 @@
         "default": "./esm/index.js"
       },
       "require": {
-        "types": "./types/index.d.ts",
+        "types": "./types/index.d.cts",
         "default": "./cjs/index.js"
       },
       "default": "./esm/index.js"
