--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/sqb",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-alpha.35",
   "description": "Opra SQB adapter package",
   "author": "Panates",
   "license": "MIT",
@@ -25,18 +25,18 @@
   "dependencies": {
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.3",
-    "valgen": "^5.8.2"
+    "valgen": "^5.9.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@sqb/builder": "^4.16.1",
-    "@sqb/connect": "^4.16.1",
-    "@sqb/postgres": "^4.16.1",
-    "postgrejs": "^2.18.1",
+    "@sqb/builder": "^4.17.0",
+    "@sqb/connect": "^4.17.0",
+    "@sqb/postgres": "^4.17.0",
+    "postgrejs": "^2.19.0",
     "ts-gems": "^3.5.0"
   },
   "peerDependencies": {
-    "@opra/core": "^1.0.0-alpha.34",
+    "@opra/core": "^1.0.0-alpha.35",
     "@sqb/connect": ">= 4.10.6"
   },
   "type": "module",
@@ -47,7 +47,7 @@
         "default": "./esm/index.js"
       },
       "require": {
-        "types": "./types/index.d.ts",
+        "types": "./types/index.d.cts",
         "default": "./cjs/index.js"
       },
       "default": "./esm/index.js"
