--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-strip": "^3.0.4",
+    "@swc-node/jest": "^1.8.12",
+    "@swc/core": "^1.7.14",
+    "@swc/helpers": "^0.5.12",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.0",
     "@types/supertest": "^6.0.2",
@@ -58,7 +61,7 @@
     "rollup-plugin-command": "^1.1.3",
     "rollup-plugin-filesize": "^10.0.0",
     "ts-cleanup": "^1.3.0",
-    "ts-jest": "^29.2.4",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "github:TypeStrong/ts-node#main",
     "tsconfig-paths": "^4.2.0",
