--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -2,6 +2,6 @@
   "extends": "@panates/tsconfig/node.json",
   "compilerOptions": {
     "types": ["node", "jest"],
-    "verbatimModuleSyntax": true
+    "isolatedModules": true
   }
 }
