--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-strip": "^3.0.4",
     "@swc-node/jest": "^1.8.12",
-    "@swc/core": "^1.7.21",
-    "@swc/helpers": "^0.5.12",
+    "@swc-node/register": "^1.10.9",
+    "@swc/core": "^1.7.23",
+    "@swc/helpers": "^0.5.13",
     "@types/jest": "^29.5.12",
-    "@types/node": "^22.5.1",
+    "@types/node": "^22.5.4",
     "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "chalk": "^5.3.0",
@@ -57,7 +58,7 @@
     "putil-merge": "^3.13.0",
     "putil-varhelpers": "^1.6.5",
     "rimraf": "^6.0.1",
-    "rollup": "^4.21.1",
+    "rollup": "^4.21.2",
     "rollup-plugin-command": "^1.1.3",
     "rollup-plugin-filesize": "^10.0.0",
     "ts-cleanup": "^1.3.0",
