--- a/packages/elastic/package.json
+++ b/packages/elastic/package.json
@@ -5,7 +5,7 @@
   "author": "Panates",
   "license": "MIT",
   "scripts": {
-    "compile": "tsc",
+    "compile": "tsc --noEmit",
     "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/elastic/cjs/package.json",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^8.15.0",
-    "@faker-js/faker": "^8.4.1",
+    "@faker-js/faker": "^9.0.0",
     "ts-gems": "^3.5.0"
   },
   "peerDependencies": {
