--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -5,7 +5,7 @@
   "author": "Panates",
   "license": "MIT",
   "scripts": {
-    "compile": "tsc",
+    "compile": "tsc --noEmit",
     "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/mongodb/cjs/package.json",
@@ -28,8 +28,8 @@
     "valgen": "^5.9.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "mongodb": "^6.8.0",
+    "@faker-js/faker": "^9.0.0",
+    "mongodb": "^6.8.1",
     "ts-gems": "^3.5.0"
   },
   "peerDependencies": {
