--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -5,7 +5,7 @@
   "author": "Panates",
   "license": "MIT",
   "scripts": {
-    "compile": "tsc",
+    "compile": "tsc --noEmit",
     "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/sqb/cjs/package.json",
@@ -28,7 +28,7 @@
     "valgen": "^5.9.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
+    "@faker-js/faker": "^9.0.0",
     "@sqb/builder": "^4.17.0",
     "@sqb/connect": "^4.17.0",
     "@sqb/postgres": "^4.17.0",
