--- a/examples/_lib/customer-mongo/package.json
+++ b/examples/_lib/customer-mongo/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "module": "./index.js",
   "dependencies": {
-    "@opra/common": "^1.0.0-alpha.39",
-    "@opra/mongodb": "^1.0.0-alpha.39",
+    "@opra/common": "^1.0.0-beta.1",
+    "@opra/mongodb": "^1.0.0-beta.1",
     "mongodb": "^6.8.1",
     "ts-gems": "^3.5.0"
   },
