--- a/examples/express-elastic/package.json
+++ b/examples/express-elastic/package.json
@@ -6,9 +6,9 @@
   "module": "./start.js",
   "dependencies": {
     "@elastic/elasticsearch": "^8.15.0",
-    "@opra/common": "^1.0.0-alpha.39",
-    "@opra/core": "^1.0.0-alpha.39",
-    "@opra/mongodb": "^1.0.0-alpha.39",
+    "@opra/common": "^1.0.0-beta.1",
+    "@opra/core": "^1.0.0-beta.1",
+    "@opra/mongodb": "^1.0.0-beta.1",
     "express": "^4.19.2",
     "ts-gems": "^3.5.0"
   },
