--- a/examples/express-mongo/package.json
+++ b/examples/express-mongo/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "module": "./start.js",
   "dependencies": {
-    "@opra/common": "^1.0.0-alpha.39",
-    "@opra/core": "^1.0.0-alpha.39",
-    "@opra/mongodb": "^1.0.0-alpha.39",
+    "@opra/common": "^1.0.0-beta.1",
+    "@opra/core": "^1.0.0-beta.1",
+    "@opra/mongodb": "^1.0.0-beta.1",
     "express": "^4.19.2",
     "mongodb": "^6.8.1",
     "ts-gems": "^3.5.0"
