--- a/examples/nestjs-express-mongo/package.json
+++ b/examples/nestjs-express-mongo/package.json
@@ -7,9 +7,9 @@
   "dependencies": {
     "@nestjs/common": "^10.4.1",
     "@nestjs/core": "^10.4.1",
-    "@opra/common": "^1.0.0-alpha.39",
-    "@opra/core": "^1.0.0-alpha.39",
-    "@opra/mongodb": "^1.0.0-alpha.39",
+    "@opra/common": "^1.0.0-beta.1",
+    "@opra/core": "^1.0.0-beta.1",
+    "@opra/mongodb": "^1.0.0-beta.1",
     "mongodb": "^6.8.1",
     "ts-gems": "^3.5.0"
   },
