--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/core",
-  "version": "1.0.0-alpha.39",
+  "version": "1.0.0-beta.1",
   "description": "Opra schema package",
   "author": "Panates",
   "license": "MIT",
@@ -29,7 +29,7 @@
     "@browsery/antlr4": "^4.13.3-r1",
     "@browsery/http-parser": "^0.5.9-r1",
     "@browsery/type-is": "^1.6.18-r5",
-    "@opra/common": "^1.0.0-alpha.39",
+    "@opra/common": "^1.0.0-beta.1",
     "accepts": "^1.3.8",
     "base64-stream": "^1.0.0",
     "busboy": "^1.6.0",
