--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/mongodb",
-  "version": "1.0.0-alpha.39",
+  "version": "1.0.0-beta.1",
   "description": "Opra MongoDB adapter package",
   "author": "Panates",
   "license": "MIT",
@@ -33,8 +33,8 @@
     "ts-gems": "^3.5.0"
   },
   "peerDependencies": {
-    "@opra/common": "^1.0.0-alpha.39",
-    "@opra/core": "^1.0.0-alpha.39",
+    "@opra/common": "^1.0.0-beta.1",
+    "@opra/core": "^1.0.0-beta.1",
     "mongodb": ">= 6.0.0"
   },
   "type": "module",
