--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/sqb",
-  "version": "1.0.0-alpha.39",
+  "version": "1.0.0-beta.1",
   "description": "Opra SQB adapter package",
   "author": "Panates",
   "license": "MIT",
@@ -36,7 +36,7 @@
     "ts-gems": "^3.5.0"
   },
   "peerDependencies": {
-    "@opra/core": "^1.0.0-alpha.39",
+    "@opra/core": "^1.0.0-beta.1",
     "@sqb/connect": ">= 4.18.0"
   },
   "type": "module",
