--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,14 @@ jobs:
           discovery.type: single-node
           ES_JAVA_OPTS: -Xms500m -Xmx500m
           xpack.security.enabled: false
+      - image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
+        environment:
+          - cluster.name: opra-test-cluster
+          - xpack.security.enabled: false
+          - transport.host: localhost
+          - network.host: 127.0.0.1
+          - http.port: 9200
+          - discovery.type: single-node
     environment:
       NODE_ENV: test
       POSTGRES_USER: postgres
