--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,6 +83,8 @@ jobs:
 
       - name: Run tests
         run: npm run citest
+        env:
+          NODE_OPTIONS: "--max_old_space_size=4096"
 
 #      - name: Coveralls
 #        uses: coverallsapp/github-action@v2
