--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,18 +56,22 @@ jobs:
 
       - name: Cache + Restore node_modules
         uses: actions/cache@v4
+        env:
+          cache-name: cache-node-modules
         with:
           # Cache node_modules and Puppeteer chrome
           path: |
             ~/.cache
-            node_modules
-            nmg-analytics/node_modules
-            slate-app/node_modules
-            slate-extension/node_modules
-            master-analytics-scripts/node_modules
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-              ${{ runner.os }}-node_modules-
+              ${{ runner.os }}-build-${{ env.cache-name }}-
+              ${{ runner.os }}-build-
+              ${{ runner.os }}-
+
+      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: npm list
 
       - name: Install NodeJS dependencies
         run: npm install
