--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@opra/common": "^1.0.0-beta.3",
+    "@opra/core": "^1.0.0-beta.3",
     "node-events-async": "^1.0.0",
     "tslib": "^2.7.0",
     "valgen": "^5.10.0"
