--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -40,10 +40,11 @@
     "@opra/kafka": "^1.0.0-beta.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.3",
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/testing": "^10.4.4",
     "@types/lodash.head": "^4.0.9",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
     "filedirname": "^3.4.0",
     "kafkajs": "^2.2.4",
     "rxjs": "^7.8.1",
