chore: Kafka test timeout fix #5

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,7 @@ jobs:
         uses: spicyparrot/kafka-kraft-action@v1.1.0
         with:
           kafka-version: "3.7.0"
+          kafka-topics: "example,1"
 
       - name: Checkout
         uses: actions/checkout@v4
