--- a/examples/_lib/customer-mongo/package.json
+++ b/examples/_lib/customer-mongo/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "module": "./index.js",
   "dependencies": {
-    "@opra/common": "^1.0.0-beta.6",
-    "@opra/mongodb": "^1.0.0-beta.6",
+    "@opra/common": "^1.0.1",
+    "@opra/mongodb": "^1.0.1",
     "mongodb": "^6.9.0",
     "ts-gems": "^3.5.1"
   },
