--- a/examples/express-mongo/package.json
+++ b/examples/express-mongo/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "module": "./start.js",
   "dependencies": {
-    "@opra/common": "^1.0.0-beta.6",
-    "@opra/core": "^1.0.0-beta.6",
-    "@opra/mongodb": "^1.0.0-beta.6",
+    "@opra/common": "^1.0.1",
+    "@opra/core": "^1.0.1",
+    "@opra/mongodb": "^1.0.1",
     "express": "^4.21.1",
     "mongodb": "^6.9.0",
     "ts-gems": "^3.5.1"
