--- a/examples/express-sqb/package.json
+++ b/examples/express-sqb/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "module": "./index.js",
   "dependencies": {
-    "@opra/common": "^1.0.0-beta.6",
-    "@opra/core": "^1.0.0-beta.6",
-    "@opra/sqb": "^1.0.0-beta.6",
+    "@opra/common": "^1.0.1",
+    "@opra/core": "^1.0.1",
+    "@opra/sqb": "^1.0.1",
     "@sqb/connect": "^4.19.1",
     "@sqb/postgres": "^4.19.1",
     "express": "^4.21.1",
