--- a/examples/nestjs-express-mongo/package.json
+++ b/examples/nestjs-express-mongo/package.json
@@ -7,9 +7,9 @@
   "dependencies": {
     "@nestjs/common": "^10.4.4",
     "@nestjs/core": "^10.4.4",
-    "@opra/common": "^1.0.0-beta.6",
-    "@opra/core": "^1.0.0-beta.6",
-    "@opra/mongodb": "^1.0.0-beta.6",
+    "@opra/common": "^1.0.1",
+    "@opra/core": "^1.0.1",
+    "@opra/mongodb": "^1.0.1",
     "mongodb": "^6.9.0",
     "ts-gems": "^3.5.1"
   },
