--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/angular",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.1",
   "description": "Opra internationalization package",
   "author": "Panates",
   "license": "MIT",
@@ -28,7 +28,7 @@
     "@angular/common": ">= 18.0.0",
     "@angular/core": ">= 18.0.0",
     "@browsery/type-is": "^1.6.18-r5",
-    "@opra/client": "^1.0.0-beta.6",
+    "@opra/client": "^1.0.1",
     "rxjs": "^7.8.1",
     "ts-gems": "^3.0.0"
   },
@@ -39,7 +39,7 @@
     "@angular/compiler-cli": "^18.2.8",
     "@angular/platform-browser": "^18.0.2",
     "@angular/platform-browser-dynamic": "^18.2.8",
-    "@opra/client": "^1.0.0-beta.6",
+    "@opra/client": "^1.0.1",
     "core-js": "^3.38.1",
     "cross-fetch": "^4.0.0",
     "express": "^4.21.1",
