--- a/packages/elastic/package.json
+++ b/packages/elastic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/elastic",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.1",
   "description": "Opra Elastic Search adapter package",
   "author": "Panates",
   "license": "MIT",
@@ -35,8 +35,8 @@
   },
   "peerDependencies": {
     "@elastic/elasticsearch": ">=8.7.0",
-    "@opra/common": "^1.0.0-beta.6",
-    "@opra/core": "^1.0.0-beta.6"
+    "@opra/common": "^1.0.1",
+    "@opra/core": "^1.0.1"
   },
   "type": "module",
   "exports": {
