--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/kafka",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.1",
   "description": "Opra Kafka package",
   "author": "Panates",
   "license": "MIT",
@@ -25,8 +25,8 @@
     "clean:cover": "rimraf ../../coverage/kafka"
   },
   "dependencies": {
-    "@opra/common": "^1.0.0-beta.6",
-    "@opra/core": "^1.0.0-beta.6",
+    "@opra/common": "^1.0.1",
+    "@opra/core": "^1.0.1",
     "node-events-async": "^1.0.0",
     "tslib": "^2.7.0",
     "valgen": "^5.10.0"
