refactor: Move to @jsopen/objects package according to putil-merge

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -31,10 +31,8 @@
     "@browsery/http-parser": "^0.5.9-r1",
     "@browsery/i18next": "^23.12.3-r1",
     "@browsery/type-is": "^1.6.18-r5",
+    "@jsopen/objects": "^1.2.0",
     "fast-tokenizer": "^1.7.0",
-    "lodash.omit": "^4.5.0",
-    "putil-isplainobject": "^1.1.5",
-    "putil-merge": "^3.13.0",
     "putil-promisify": "^1.10.1",
     "putil-varhelpers": "^1.6.5",
     "reflect-metadata": "^0.2.2",
@@ -48,7 +46,6 @@
     "@browsery/stream": "^4.3.1-r1",
     "@browsery/util": "^0.12.6-r1",
     "@types/encodeurl": "^1.0.2",
-    "@types/lodash.omit": "^4.5.9",
     "@types/validator": "^13.12.2",
     "path-browserify": "^1.0.1",
     "ts-gems": "^3.6.0"
