--- a/packages/elastic/package.json
+++ b/packages/elastic/package.json
@@ -23,13 +23,12 @@
     "clean:cover": "rimraf ../../coverage/elastic"
   },
   "dependencies": {
-    "lodash.omit": "^4.5.0",
-    "putil-isplainobject": "^1.1.5",
+    "@jsopen/objects": "^1.2.0",
     "tslib": "^2.8.1",
     "valgen": "^5.12.0"
   },
   "devDependencies": {
-    "@elastic/elasticsearch": "^8.16.1",
+    "@elastic/elasticsearch": "^8.16.2",
     "@faker-js/faker": "^9.2.0",
     "ts-gems": "^3.6.0"
   },
