--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -29,6 +29,7 @@
     "@browsery/antlr4": "^4.13.3-r1",
     "@browsery/http-parser": "^0.5.9-r1",
     "@browsery/type-is": "^1.6.18-r5",
+    "@jsopen/objects": "^1.2.0",
     "@opra/common": "^1.2.1",
     "@opra/core": "^1.2.1",
     "accepts": "^1.3.8",
@@ -47,8 +48,6 @@
     "mime-types": "^2.1.35",
     "node-events-async": "^1.0.0",
     "power-tasks": "^1.11.0",
-    "putil-isplainobject": "^1.1.5",
-    "putil-merge": "^3.13.0",
     "putil-varhelpers": "^1.6.5",
     "range-parser": "^1.2.1",
     "raw-body": "^3.0.0",
