dev: Migrated to ESLint 9

--- a/packages/angular/tsconfig.spec.json
+++ b/packages/angular/tsconfig.spec.json
@@ -12,7 +12,9 @@
       "@opra/common": ["../common/src"],
       "@opra/core": ["../core/src"],
       "@opra/http": ["../http/src"],
-      "customer-mongo/models": ["../../examples/_lib/customer-mongo/src/models/index"]
+      "customer-mongo/models": [
+        "../../examples/_lib/customer-mongo/src/models/index"
+      ]
     }
   }
 }
