--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -25,28 +25,27 @@
     "tslib": "^2.8.1"
   },
   "peerDependencies": {
-    "@angular/common": ">=18.0.0",
-    "@angular/core": ">=18.0.0",
+    "@angular/common": "^18.0.0 || ^19.0.0",
+    "@angular/core": "^18.0.0 || ^19.0.0",
     "@browsery/type-is": "^1.6.18-r8",
-    "@opra/client": "^1.7.2",
-    "rxjs": "^7.8.1",
-    "ts-gems": "^3.10.0"
+    "@opra/client": ">=1.7.2 <2",
+    "rxjs": ">=7.8.0 <8",
+    "ts-gems": "^3.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.7",
-    "@angular/cli": "^19.0.7",
-    "@angular/compiler": "^19.0.1",
-    "@angular/compiler-cli": "^19.0.6",
-    "@angular/platform-browser": "^19.0.1",
-    "@angular/platform-browser-dynamic": "^19.0.6",
+    "@angular-devkit/build-angular": "^19.1.2",
+    "@angular/cli": "^19.1.2",
+    "@angular/compiler": "^19.1.1",
+    "@angular/compiler-cli": "^19.1.1",
+    "@angular/platform-browser": "^19.1.1",
+    "@angular/platform-browser-dynamic": "^19.1.1",
     "@opra/client": "^1.7.2",
     "core-js": "^3.40.0",
     "cross-fetch": "^4.1.0",
     "express": "^4.21.2",
-    "ng-packagr": "^19.0.1",
+    "ng-packagr": "^19.1.0",
     "superagent": "^10.1.1",
     "supertest": "^7.0.0",
-    "ts-gems": "^3.11.3",
     "zone.js": "^0.15.0"
   },
   "repository": {
