--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@opra/common": "^1.7.2",
     "accepts": "^1.3.8",
-    "rxjs": ">=7.0.0",
+    "rxjs": "^7.0.0 || ^8.0.0",
     "ts-gems": "^3.11.3",
     "tslib": "^2.8.1"
   },
