--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -32,7 +32,7 @@
     "valgen": "^5.12.0"
   },
   "peerDependencies": {
-    "kafkajs": "^2.2.4"
+    "kafkajs": ">=2.2.4 <3"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
