--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -31,11 +31,11 @@
     "tslib": "^2.8.1"
   },
   "peerDependencies": {
-    "@nestjs/common": ">=10.0.0 <12",
-    "@nestjs/core": ">=10.0.0 <12"
+    "@nestjs/common": "^10.0.0 || ^11.0.0",
+    "@nestjs/core": "^10.0.0 || ^11.0.0"
   },
   "optionalDependencies": {
-    "@nestjs/microservices": ">=10.0.0 <12",
+    "@nestjs/microservices": "^10.0.0 || ^11.0.0",
     "@opra/http": "^1.7.2",
     "@opra/kafka": "^1.7.2"
   },
