--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@panates/eslint-config-ts": "^2.0.3",
     "@panates/tsconfig": "^2.0.3",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.5",
+    "@types/node": "^22.10.10",
     "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "chalk": "^5.4.1",
@@ -44,6 +44,7 @@
     "jest-junit": "^16.0.0",
     "jest-preset-angular": "^14.5.0",
     "madge": "^8.0.0",
+    "npm-check-updates": "^17.1.14",
     "npm-run-path": "^6.0.0",
     "prettier": "^3.4.2",
     "putil-varhelpers": "^1.6.5",
@@ -54,6 +55,6 @@
     "ts-node": "github:TypeStrong/ts-node#main",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.3"
   }
 }
