--- a/packages/rabbitmq/package.json
+++ b/packages/rabbitmq/package.json
@@ -1,56 +1,46 @@
 {
-  "name": "@opra/nestjs",
+  "name": "@opra/rabbitmq",
   "version": "1.9.4",
-  "description": "Opra NestJS module",
+  "description": "Opra RabbitMQ package",
   "author": "Panates",
   "license": "MIT",
   "scripts": {
     "compile": "tsc --noEmit",
     "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/nestjs/cjs/package.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/nestjs/esm/package.json",
-    "postbuild": "cp README.md package.json ../../LICENSE ../../build/nestjs && node ../../support/postbuild.cjs",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/rabbitmq/cjs/package.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/rabbitmq/esm/package.json",
+    "postbuild": "npm run postbuild:copy && node ../../support/postbuild.cjs",
+    "postbuild:copy": "cp README.md package.json ../../LICENSE ../../build/rabbitmq",
     "lint": "eslint . --max-warnings=0",
+    "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
+    "check": "madge --circular src/**",
     "test": "jest --passWithNoTests",
     "cover": "jest --passWithNoTests --collect-coverage",
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ../../build/nestjs",
-    "clean:cover": "rimraf ../../coverage/nestjs"
+    "clean:dist": "rimraf ../../build/rabbitmq",
+    "clean:cover": "rimraf ../../coverage/rabbitmq"
   },
   "dependencies": {
-    "@jsopen/objects": "^1.5.0",
+    "@browsery/type-is": "^1.6.18-r8",
     "@opra/common": "^1.9.4",
     "@opra/core": "^1.9.4",
-    "fast-tokenizer": "^1.7.0",
-    "putil-promisify": "^1.10.1",
-    "reflect-metadata": "^0.2.2",
-    "tslib": "^2.8.1"
+    "content-type": "^1.0.5",
+    "iconv-lite": "^0.6.3",
+    "node-events-async": "^1.0.0",
+    "tslib": "^2.8.1",
+    "valgen": "^5.13.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.0.0 || ^11.0.0",
-    "@nestjs/core": "^10.0.0 || ^11.0.0"
-  },
-  "optionalDependencies": {
-    "@nestjs/microservices": "^10.0.0 || ^11.0.0",
-    "@opra/http": "^1.9.4",
-    "@opra/kafka": "^1.9.4"
+    "amqplib": "^0.10.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.5.0",
-    "@nestjs/platform-express": "^11.0.10",
-    "@nestjs/microservices": "^11.0.6",
-    "@nestjs/testing": "^11.0.10",
-    "@types/lodash.head": "^4.0.9",
-    "amqplib": "^0.10.5",
-    "express": "^4.21.2",
-    "filedirname": "^3.4.0",
-    "kafkajs": "^2.2.4",
-    "rxjs": "^7.8.1",
-    "supertest": "^7.0.0",
+    "@types/accepts": "^1.3.7",
+    "@types/amqplib": "^0.10.6",
     "ts-gems": "^3.11.3"
   },
   "type": "module",
@@ -74,14 +64,13 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/panates/opra.git",
-    "directory": "packages/nestjs"
+    "directory": "packages/rabbitmq"
   },
   "engines": {
     "node": ">=16.0",
     "npm": ">=7.0.0"
   },
   "files": [
-    "bin/",
     "cjs/",
     "esm/",
     "types/",
@@ -90,6 +79,11 @@
   ],
   "keywords": [
     "opra",
-    "nestjs"
+    "rabbitmq",
+    "amqp",
+    "amqplib",
+    "message",
+    "queue",
+    "consumer"
   ]
 }
