--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,14 +27,16 @@
   },
   "dependencies": {
     "@browsery/type-is": "^1.6.18-r8",
-    "@opra/client": "^1.11.0",
-    "@opra/common": "^1.11.0",
     "ansi-colors": "^4.1.3",
     "commander": "^13.1.0",
     "js-string-escape": "^1.0.1",
     "putil-flattentext": "^2.1.1",
     "putil-varhelpers": "^1.6.5",
     "tslib": "^2.8.1"
+  },
+  "peerDependencies": {
+    "@opra/client": "^1.11.0",
+    "@opra/common": "^1.11.0"
   },
   "type": "module",
   "exports": {
