--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,16 +25,18 @@
     "clean:cover": "rimraf ../../coverage/client"
   },
   "dependencies": {
-    "@opra/common": "^1.11.0",
     "accepts": "^1.3.8",
     "rxjs": "^7.0.0 || ^8.0.0",
-    "ts-gems": "^3.11.3",
     "tslib": "^2.8.1"
+  },
+  "peerDependencies": {
+    "@opra/common": "^1.11.0"
   },
   "devDependencies": {
     "@browsery/type-is": "^1.6.18-r8",
     "body-parser": "^1.20.3",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "ts-gems": "^3.11.3"
   },
   "type": "module",
   "exports": {
