--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,10 +26,12 @@
     "clean:cover": "rimraf ../../coverage/core"
   },
   "dependencies": {
-    "@opra/common": "^1.11.0",
     "node-events-async": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.8.1"
+  },
+  "peerDependencies": {
+    "@opra/common": "^1.11.0"
   },
   "devDependencies": {
     "ts-gems": "^3.11.3"
