--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -30,8 +30,6 @@
     "@browsery/http-parser": "^0.5.9-r4",
     "@browsery/type-is": "^1.6.18-r8",
     "@jsopen/objects": "^1.5.0",
-    "@opra/common": "^1.11.0",
-    "@opra/core": "^1.11.0",
     "accepts": "^1.3.8",
     "base64-stream": "^1.0.0",
     "busboy": "^1.6.0",
@@ -56,6 +54,10 @@
     "tslib": "^2.8.1",
     "valgen": "^5.13.0",
     "vary": "^1.1.2"
+  },
+  "peerDependencies": {
+    "@opra/common": "^1.11.0",
+    "@opra/core": "^1.11.0"
   },
   "optionalDependencies": {
     "express": "^4.0.0 || ^5.0.0",
