--- a/packages/nestjs-http/package.json
+++ b/packages/nestjs-http/package.json
@@ -23,11 +23,13 @@
   },
   "dependencies": {
     "@jsopen/objects": "^1.5.0",
-    "@opra/common": "^1.11.0",
-    "@opra/core": "^1.11.0",
     "tslib": "^2.8.1"
   },
   "peerDependencies": {
+    "@opra/common": "^1.11.0",
+    "@opra/core": "^1.11.0",
+    "@opra/nestjs": "^1.11.0",
+    "@opra/http": "^1.11.0",
     "@nestjs/common": "^10.0.0 || ^11.0.0",
     "@nestjs/core": "^10.0.0 || ^11.0.0"
   },
