--- a/packages/nestjs-kafka/package.json
+++ b/packages/nestjs-kafka/package.json
@@ -23,20 +23,19 @@
   },
   "dependencies": {
     "@jsopen/objects": "^1.5.0",
-    "@opra/common": "^1.11.0",
-    "@opra/core": "^1.11.0",
     "fast-tokenizer": "^1.7.0",
     "putil-promisify": "^1.10.1",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.8.1"
   },
   "peerDependencies": {
+    "@opra/common": "^1.11.0",
+    "@opra/core": "^1.11.0",
+    "@opra/nestjs": "^1.11.0",
+    "@opra/kafka": "^1.11.0",
     "@nestjs/common": "^10.0.0 || ^11.0.0",
     "@nestjs/core": "^10.0.0 || ^11.0.0",
-    "@nestjs/microservices": "^10.0.0 || ^11.0.0"
-  },
-  "optionalDependencies": {
-    "@opra/kafka": "^1.11.0",
+    "@nestjs/microservices": "^10.0.0 || ^11.0.0",
     "kafkajs": "^2.2.4"
   },
   "devDependencies": {
