--- a/packages/nestjs-kafka/tsconfig-build-cjs.json
+++ b/packages/nestjs-kafka/tsconfig-build-cjs.json
@@ -4,7 +4,7 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "rootDir": "src",
-    "outDir": "../../build/nestjs/cjs",
+    "outDir": "../../build/nestjs-kafka/cjs",
     "declaration": false
   },
   "include": ["src"]
