--- a/packages/nestjs-rabbitmq/tsconfig-build-esm.json
+++ b/packages/nestjs-rabbitmq/tsconfig-build-esm.json
@@ -4,8 +4,8 @@
     "module": "ES2020",
     "moduleResolution": "Node",
     "rootDir": "src",
-    "outDir": "../../build/nestjs/esm",
-    "declarationDir": "../../build/nestjs/types"
+    "outDir": "../../build/nestjs-rabbitmq/esm",
+    "declarationDir": "../../build/nestjs-rabbitmq/types"
   },
   "include": ["src"]
 }
