--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -30,7 +30,8 @@
     "@opra/common": "^1.11.0",
     "@opra/core": "^1.11.0",
     "@nestjs/common": "^10.0.0 || ^11.0.0",
-    "@nestjs/core": "^10.0.0 || ^11.0.0"
+    "@nestjs/core": "^10.0.0 || ^11.0.0",
+    "@nestjs/microservices": "^10.0.0 || ^11.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.5.0",
