--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -27,6 +27,11 @@
     "tslib": "^2.8.1",
     "valgen": "^5.13.0"
   },
+  "peerDependencies": {
+    "@opra/core": "^1.11.0",
+    "@opra/http": "^1.11.0",
+    "@sqb/connect": "^4.0.0"
+  },
   "devDependencies": {
     "@faker-js/faker": "^9.5.0",
     "@sqb/builder": "^4.19.5",
@@ -34,11 +39,6 @@
     "@sqb/postgres": "^4.19.5",
     "postgrejs": "^2.22.3",
     "ts-gems": "^3.11.3"
-  },
-  "peerDependencies": {
-    "@opra/core": "^1.11.0",
-    "@opra/http": "^1.11.0",
-    "@sqb/connect": ">= 4.19.1"
   },
   "type": "module",
   "exports": {
